--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
 
     <div class="footer-content">
       <div class="container">
-        <div class="row">
+        <div class="row align-item-center">
           <div class="col-xl-4">
             <div class="list-item">
               <h5>HALOVIETNAM LTD</h5>
-              <h5>66, Dang Van ngu, Dong Da Hanoi,</h5>
-              <h5>Vietnam</h5>
+              <h5>66, Dang Van ngu, Dong Da</h5>
+              <h5>Hanoi,Vietnam</h5>
               <h5>contact@halovietnam.com</h5>
               <h5>+844 35149182</h5>
             </div>
